# uav_optimizer

./: .gitignore  LICENSE  README.md  __init__.py  addon_images.py  build_uvpack.bat  mesh_health.py  op_bake.py  op_chunk.py  op_export.py  op_lod.py  op_packing.py  op_preprocess.py  op_qem.py  op_quadriflow.py  op_quadwild.py  op_seam.py  op_shrinkwrap.py  op_uv.py  op_voxel.py  properties.py  qem_core.py  ui.py  uv_utils.py  uvpm_addon.py  uvpm_bridge.py
quadwild_lib/: __init__.py
quadwild_util/: exporter.py
tests/: smoke_bake_modal_blender.py  smoke_lod_cleanup_blender.py  smoke_lod_failure_cleanup_blender.py  smoke_retopo_failure_restore_blender.py  test_bake_modal.py  test_lod_cleanup.py  test_quadriflow_targeting.py  test_quadwild_ui.py  test_retopo_failure_restore.py  test_uvpack_dll_selection.py
uvpack_cpp/: CMakeLists.txt  uvpack.cpp  uvpack.h
uvpack_lib/: __init__.py
uvpm3_vendor/scripted_pipeline/engine_packages/: geom_utils.py  scripted_pipeline.py  utils.py
uvpm3_vendor/scripted_pipeline/engine_packages/pack_utils/: __init__.py  pack_manager.py
uvpm3_vendor/scripted_pipeline/engine_scenarios/pack-general/: scenario.py
